Closed Bug 611960 Opened 14 years ago Closed 14 years ago

bustage on Win64 after bug 583138 is landed

Categories

(Core :: Graphics, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b8

People

(Reporter: m_kato, Assigned: m_kato)

References

Details

Attachments

(2 files)

We should use _M_IX86 macro with MOZILLA_COMPILE_WITH_SSE2 because x64 compiler has no inline assembler.
Attached patch fixSplinter Review
I guess this means the assembly code should be ported to YASM so it can be used on Win64...
Or use intrinsics. See bug 571139 which has an implementation of the older YCbCr conversion code.
Note that this fix needs a patch file containing the change and an update to update.sh and the README describing the change.
I also think the better define to use rather than _M_IX86 is ARCH_CPU_X86_32 (defined in chromium_types.h).
(In reply to comment #3)
> Or use intrinsics. See bug 571139 which has an implementation of the older
> YCbCr conversion code.

I will update to intrinsic version by Bug 571739.  I was waiting that bug 577843 and 583138 were fixed.
(In reply to comment #5)
> I also think the better define to use rather than _M_IX86 is ARCH_CPU_X86_32
> (defined in chromium_types.h).

Other place (yuv_convert.cpp) uses _M_IX86 and inline code is Microsoft specific code, so ARCH_CPU_X86_32 isn't best even if Makefile defines MSC_VER only.
Attached patch for check-inSplinter Review
http://hg.mozilla.org/mozilla-central/rev/b8a0c34bb9f7
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b8
You forgot the update to README and update.sh.
Oh I see you edited the convert.patch directly rather than adding a separate patch. Disregard comment 10.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: