Bug 611960 - bustage on Win64 after bug 583138 is landed. r=roc, a=roc